# Todo-List-Flask-App

./: .pdm.toml  README.md  dev.env  pyproject.toml
src/toudou/: __init__.py  models.py  services.py  views.py
src/toudou/static/css/: pico.min.css  styles.css
src/toudou/templates/: csv_import_form.html  home.html  layout.html  todo_create_form.html  todo_get_all.html  todo_update_form.html
