[project]
name = "Toudou"
version = "0.1"
description = "A simple task manager."
readme = "README.md"
dependencies = [
    "flask>=2.3.1",
    "sqlalchemy>=2.0.5.post1",
    "click>=8.1.3",
    "flask-wtf>=1.1.1",
    "flask-httpauth>=4.7.0",
]
requires-python = ">=3.10"
license = { text = "MIT" }


[project.scripts]
toudou = "toudou.views:cli"


[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.scripts]
_.env_file = "dev.env"
start.env_file = "dev.env"
start.cmd = "flask --app toudou.views --debug run"